; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/1upkeyboards/sweet16/keymaps/switchtester/extr_switches.c_bitfieldtoi.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/1upkeyboards/sweet16/keymaps/switchtester/extr_switches.c_bitfieldtoi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mechswitch = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitfieldtoi(i64 %0, i32 %1) #0 {
  %3 = alloca %struct.mechswitch, align 4
  %4 = alloca { i64, i32 }, align 4
  %5 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %4, i32 0, i32 0
  store i64 %0, i64* %5, align 4
  %6 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %4, i32 0, i32 1
  store i32 %1, i32* %6, align 4
  %7 = bitcast %struct.mechswitch* %3 to i8*
  %8 = bitcast { i64, i32 }* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 %8, i64 12, i1 false)
  %9 = getelementptr inbounds %struct.mechswitch, %struct.mechswitch* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = shl i32 %10, 9
  %12 = getelementptr inbounds %struct.mechswitch, %struct.mechswitch* %3, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = shl i32 %13, 5
  %15 = or i32 %11, %14
  %16 = getelementptr inbounds %struct.mechswitch, %struct.mechswitch* %3, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %15, %17
  ret i32 %18
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
